# Ski-Adventure

./: CMakeLists.txt  Readme.md  resources.qrc
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/fx/: EffectManager.cpp  EffectManager.h
src/game/: GameObject.cpp  GameObject.h  avalanche.cpp  avalanche.h  carddatabase.cpp  carddatabase.h  cardeffects.cpp  cardeffects.h  coin.cpp  coin.h  house.cpp  house.h  mount.cpp  mount.h  obstacle.cpp  obstacle.h  penguin.cpp  penguin.h  player.cpp  player.h  seesaw.cpp  seesaw.h  signboard.cpp  signboard.h  stone.cpp  stone.h  tree.cpp  tree.h  yeti.cpp  yeti.h
src/ui/: MainMenuScreen.cpp  MainMenuScreen.h  SettingsDialog.cpp  SettingsDialog.h  cardselectiondialog.cpp  cardselectiondialog.h  cardwidget.cpp  cardwidget.h  debuginfodialog.cpp  debuginfodialog.h  gameoverdialog.cpp  gameoverdialog.h  gamescreen.cpp  gamescreen.h  helpdialog.cpp  helpdialog.h  imagebutton.cpp  imagebutton.h  imagedisplaydialog.cpp  imagedisplaydialog.h  mainwindow.cpp  mainwindow.h  pausedialog.cpp  pausedialog.h  placeholderdialog.cpp  placeholderdialog.h
滑雪大冒险素材/MonoBehaviour/: GUISettingsButton.txt
